--- a/code/description
+++ b/code/description
@@ -1,1 +1,1 @@
-Code for proposed resampling procedures for error control, including simulation code to validate our procedures.
+Code for proposed resampling procedures for error control, including sample simulation code to validate our procedures.
